force-app/main/default/objects/cg_Quote_Lines__c/cg_Quote_Lines__c.object-meta.xml
<CustomObject>
    <label>Quote Lines</label>
    <nameField>
        <label>Quote Lines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>