force-app/main/default/objects/cg_Quote_Lines__c/fields/cg_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>cg_Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>