force-app/main/default/objects/cg_Quote_Lines__c/fields/cg_Discount_percent__c.field-meta.xml
<CustomField>
    <fullName>cg_Discount_percent__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>