force-app/main/default/objects/cg_Quote_Lines__c/fields/cg_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>cg_Product_Code__c</fullName>
    <label>Product Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>