force-app/main/default/objects/cg_Quote_Lines__c/fields/cg_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cg_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>