force-app/main/default/objects/cg_Quote_Lines__c/fields/cg_Total__c.field-meta.xml
<CustomField>
    <fullName>cg_Total__c</fullName>
    <formula>(
  (cg_Unit_Price__c * cg_Quantity__c)
  -
  (
    /* Discount by percent (if present) */
    (cg_Unit_Price__c * cg_Quantity__c) * 
    (IF(ISBLANK(cg_Discount_percent__c), 0, cg_Discount_percent__c / 100))
    +
    /* Discount by amount (if present) */
    IF(ISBLANK(cg_Discount_Amount__c), 0, cg_Discount_Amount__c)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>