force-app/main/default/objects/cg_Quote_Lines__c/fields/cg_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>cg_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>